force-app/main/default/objects/Activity/fields/Account_Call__c.field-meta.xml
<CustomField>
    <fullName>Account_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Call</label>
    <referenceTo>Account_Call__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>