force-app/main/default/objects/Activity/fields/Account_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Call_Id__c</fullName>
    <label>Account Call Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>