force-app/main/default/objects/Activity/fields/AccountNumber_MDM_KAM_Activity__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber_MDM_KAM_Activity__c</fullName>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>