force-app/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentation Only</fullName>
            </value>
            <value>
                <fullName>Presentation and Office Process</fullName>
            </value>
            <value>
                <fullName>Office Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>