force-app/main/default/objects/Activity/fields/Description_New__c.field-meta.xml
<CustomField>
    <fullName>Description_New__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>