force-app/main/default/objects/Activity/fields/Follow_Up_Items__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Items__c</fullName>
    <label>Follow Up Items</label>
    <type>TextArea</type>
</CustomField>