force-app/main/default/objects/Activity/fields/JJVC_Attendees__c.field-meta.xml
<CustomField>
    <fullName>JJVC_Attendees__c</fullName>
    <label>JJVC Attendees</label>
    <type>TextArea</type>
</CustomField>