force-app/main/default/objects/Activity/fields/Key_Actions__c.field-meta.xml
<CustomField>
    <fullName>Key_Actions__c</fullName>
    <label>Key Actions</label>
    <type>TextArea</type>
</CustomField>