force-app/main/default/objects/Activity/fields/Last_Modified_by__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by__c</fullName>
    <formula>LastModifiedBy.FirstName &amp;&#39; &#39;&amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified by</label>
    <type>Text</type>
</CustomField>