force-app/main/default/objects/Activity/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location/Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>