force-app/main/default/objects/Activity/fields/Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comments__c</fullName>
    <label>Manager Comments</label>
    <type>TextArea</type>
</CustomField>