force-app/main/default/objects/Activity/fields/Next_Call_Objective__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Objective__c</fullName>
    <label>Next Call Objective</label>
    <type>TextArea</type>
</CustomField>