force-app/main/default/objects/Activity/fields/of_Faculty_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Faculty_Attendees__c</fullName>
    <label># of Faculty Attendees</label>
    <type>TextArea</type>
</CustomField>