force-app/main/default/objects/Activity/fields/of_Student_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Student_Attendees__c</fullName>
    <label># of Student Attendees</label>
    <type>TextArea</type>
</CustomField>