force-app/main/default/objects/Activity/fields/SAP_EXTRACT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SAP_EXTRACT_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP_EXTRACT_FLAG</label>
    <type>Checkbox</type>
</CustomField>