force-app/main/default/objects/Activity/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <type>TextArea</type>
</CustomField>