force-app/main/default/objects/Activity/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>