force-app/main/default/objects/Activity/fields/Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner__c</fullName>
    <label>Territory Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>