force-app/main/default/objects/Activity/fields/TEST_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>TEST_NUMBER__c</fullName>
    <label>TEST_NUMBER_TEST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>