force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Digital Interaction</fullName>
            </value>
            <value>
                <fullName>Didactic Lecture</fullName>
            </value>
            <value>
                <fullName>Convention</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>STAPLE</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Promotion/Marketing</fullName>
            </value>
            <value>
                <fullName>Sponsorship Event</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn (School)</fullName>
            </value>
            <value>
                <fullName>Lunch &amp; Learn (Student Club)</fullName>
            </value>
            <value>
                <fullName>Faculty Meeting</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Doctor Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>