force-app/main/default/objects/Activity/fields/User_Terr__c.field-meta.xml
<CustomField>
    <fullName>User_Terr__c</fullName>
    <label>User Terr#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>